--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
+    
+
     <!-- Tímto způsobem přidáte do stránky obrázek -->
 
-    <h1 title="jsem titulek elementu">Headline 1</h1>
+    <h1  title="jsem titulek elementu">Headline 1</h1>
     <h2>Headline 1</h2>
-    <h3>Headline 1</h3>
-    <h4>Headline 1</h4>
+    <h3 class="nadpis nadpis1">Headline 1</h3>
+    <h4 class="nadpis1 nadpis">Headline 1</h4>
     <h5>Headline 1</h5>
-    <h6>Headline 1</h6>
+    <h6 class="nadpis">Headline 1</h6>
 
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, facere distinctio a ullam libero voluptatum
+    <p class="nadpis">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, facere distinctio a ullam libero voluptatum
         itaque ad! Iure nihil illum sunt ullam tenetur hic! Non, quos numquam. Accusamus, pariatur error.</p>
 
 
@@ -28,7 +31,7 @@
             perferendis esse iure? Beatae, recusandae quia dolorum delectus molestiae nostrum expedita, inventore veniam
             molestias, voluptatum ea facere.</p>
 
-        <li>poskdfpsokdf</li>
+        <li id="unikatni">poskdfpsokdf</li>
         <li>poskdfpsokdf</li>
         <li>poskdfpsokdf</li>
         <li>poskdfpsokdf</li>
@@ -261,6 +264,9 @@
             <input id="name" type="text" name="name" required>
 
             <label for="terms" class="checkbox-and-radio-label">
+                <input id="terms" type="checkbox" name="terms"  required> Souhlasím s podmínkami použití aplikace
+                <input id="terms" type="checkbox" name="terms" required> Souhlasím s podmínkami použití aplikace
+                <input id="terms" type="checkbox" name="terms" required> Souhlasím s podmínkami použití aplikace
                 <input id="terms" type="checkbox" name="terms" required> Souhlasím s podmínkami použití aplikace
             </label>
 
@@ -281,7 +287,7 @@
             <input id="subscription-start" type="week" name="sub-start" required>
 
             <label for="amount">Počet kusů</label>
-            <input id="amount" type="number" name="amount" min="1" max="10">
+            <input id="amount" type="number" disabled name="amount" min="1" max="10">
 
 
             <input type="file" name="file" accept="image/*">
@@ -298,7 +304,10 @@
     </form>
 
 
+    <style>
+    </style>
 
+   
 </body>
 
 </html>
