--- a/lastrada.html
+++ b/lastrada.html
@@ -1,16 +1,24 @@
 <!doctype html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
- 
-    <header class="bg-gray-900 py-4">
+
+<body class="font-serif">
+
+    <header class="bg-gray-900 py-4 fixed top-0 w-full">
         //--
     </header>
 
+
+    <div>
+        
+    </div>
+
+    
 
     <main class="flex items-center justify-center h-screen">
 
@@ -19,6 +27,29 @@
             <a href="" class="bg-red-600 py-2 px-4 rounded text-white text-xl">více</a>
         </div>
 
+
     </main>
+
+
+
+
+    <nav class="w-full bg-red-50 grid lg:grid-cols-4 grid-cols-1 *:h-96">
+        <a href="" class="group flex items-center justify-center bg-[url('/obrazky/spagety.png')] bg-no-repeat bg-center bg-cover relative">
+            <p class="text-4xl  text-white underline z-30">Denní menu</p>
+            <div class="h-full w-full bg-red-900 opacity-0 absolute group-hover:opacity-50 top-0 z-20 transition hover:duration-700 ease-in-out"></div>
+        </a>
+        <a href="" class="flex items-center justify-center bg-[url('/obrazky/pizza.png')] bg-no-repeat bg-center bg-cover">
+            <p class="text-4xl text-white underline">Denní menu</p>
+        </a>
+        <a href="" class="flex items-center justify-center bg-[url('/obrazky/drink.png')] bg-no-repeat bg-center bg-cover">
+            <p class="text-4xl text-white underline">Denní menu</p>
+        </a>
+        <a href="" class="flex items-center justify-center bg-[url('/obrazky/zelenina.png')] bg-no-repeat bg-center bg-cover">
+            <p class="text-4xl text-white underline">Denní menu</p>
+        </a>
+    </nav>
+
+
 </body>
+
 </html>
